; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/image-source/extr_color-source.c_color_source_update.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/image-source/extr_color-source.c_color_source_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.color_source = type { i8*, i8*, i8* }

@.str = private unnamed_addr constant [6 x i8] c"color\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"width\00", align 1
@.str.2 = private unnamed_addr constant [7 x i8] c"height\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*)* @color_source_update to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @color_source_update(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.color_source*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  %9 = load i8*, i8** %3, align 8
  %10 = bitcast i8* %9 to %struct.color_source*
  store %struct.color_source* %10, %struct.color_source** %5, align 8
  %11 = load i32*, i32** %4, align 8
  %12 = call i32 @obs_data_get_int(i32* %11, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  %13 = sext i32 %12 to i64
  %14 = inttoptr i64 %13 to i8*
  store i8* %14, i8** %6, align 8
  %15 = load i32*, i32** %4, align 8
  %16 = call i32 @obs_data_get_int(i32* %15, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0))
  %17 = sext i32 %16 to i64
  %18 = inttoptr i64 %17 to i8*
  store i8* %18, i8** %7, align 8
  %19 = load i32*, i32** %4, align 8
  %20 = call i32 @obs_data_get_int(i32* %19, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0))
  %21 = sext i32 %20 to i64
  %22 = inttoptr i64 %21 to i8*
  store i8* %22, i8** %8, align 8
  %23 = load i8*, i8** %6, align 8
  %24 = load %struct.color_source*, %struct.color_source** %5, align 8
  %25 = getelementptr inbounds %struct.color_source, %struct.color_source* %24, i32 0, i32 2
  store i8* %23, i8** %25, align 8
  %26 = load i8*, i8** %7, align 8
  %27 = load %struct.color_source*, %struct.color_source** %5, align 8
  %28 = getelementptr inbounds %struct.color_source, %struct.color_source* %27, i32 0, i32 1
  store i8* %26, i8** %28, align 8
  %29 = load i8*, i8** %8, align 8
  %30 = load %struct.color_source*, %struct.color_source** %5, align 8
  %31 = getelementptr inbounds %struct.color_source, %struct.color_source* %30, i32 0, i32 0
  store i8* %29, i8** %31, align 8
  ret void
}

declare dso_local i32 @obs_data_get_int(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
